--- a/src/download.html
+++ b/src/download.html
@@ -592,7 +592,9 @@
                                     <div class="w-portfolio-item order_1 tv-apps" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="emby-for-android-tv.html">
-                                                <div class="w-portfolio-item-image"><img width="320" height="320" src="resources/androidtv.png" class="w-portfolio-item-image-first wp-post-image" alt="androidtv">	</div>
+                                                <div class="w-portfolio-item-image">
+                                                    <img width="320" height="320" src="resources/androidtv.png" class="w-portfolio-item-image-first wp-post-image" alt="androidtv">
+                                                </div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby for Android TV</h2>
@@ -603,13 +605,29 @@
                                             </a>
                                             <span class="ripple-container"></span>
                                         </div>
-                                    </div><div class="w-portfolio-item order_2 tv-apps" style="opacity: 1;">
+                                    </div>
+                                    <div class="w-portfolio-item order_2 tv-apps" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="emby-for-fire-tv.html">
                                                 <div class="w-portfolio-item-image"><img width="371" height="371" src="resources/firetv.jpg" class="w-portfolio-item-image-first wp-post-image" alt="firetv">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby for Amazon Fire TV</h2>
+                                                        <span class="w-portfolio-item-arrow"></span>
+                                                        <span class="w-portfolio-item-text"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <span class="ripple-container"></span>
+                                        </div>
+                                    </div>
+                                    <div class="w-portfolio-item order_2 tv-apps" style="opacity: 1;">
+                                        <div class="w-portfolio-item-h">
+                                            <a class="w-portfolio-item-anchor" href="emby-for-nvidiashield.html">
+                                                <div class="w-portfolio-item-image"><img width="371" height="371" src="resources/nvidiashield.png" class="w-portfolio-item-image-first wp-post-image" alt="firetv">	</div>
+                                                <div class="w-portfolio-item-meta">
+                                                    <div class="w-portfolio-item-meta-h">
+                                                        <h2 class="w-portfolio-item-title">Emby for NVIDIA Shield TV</h2>
                                                         <span class="w-portfolio-item-arrow"></span>
                                                         <span class="w-portfolio-item-text"></span>
                                                     </div>
