--- a/src/emby-for-nvidiashield.html
+++ b/src/emby-for-nvidiashield.html
@@ -499,6 +499,21 @@
                                     <h2 style="margin-top:1em;">Rediscover your content</h2>
                                     <p>Emby for Fire TV also uses the power of the server to help you find movies to watch for the first time or over and over.</p>
                                     <p><img src="resources/5537f8e644beb_ftvsuggested.png"></p>
+                                    <h2 style="margin-top:1em;">The Best Way to Watch Live TV</h2>
+                                    <p>The Emby Live TV Guide helps you find what you're looking for quickly and easily.</p>
+                                    <p><img src="resources/atv9.png"></p>
+                                    <h2 style="margin-top:1em;">Fast Channel Changing</h2>
+                                    <p>In-video controls make for fast and easy channel changing.</p>
+                                    <p><img src="resources/atv10.png"></p>
+                                    <h2 style="margin-top:1em;">Never Miss a Show with Emby DVR</h2>
+                                    <p>The Emby DVR allows you to quickly schedule and manage recordings using a simple and elegant interface.</p>
+                                    <p><img src="resources/atv11.png"></p>
+                                    <h2 style="margin-top:1em;">A Beautiful Way to Play Your Music</h2>
+                                    <p>Easily play your favorite music albums, artists, genres, or instant mixes.</p>
+                                    <p><img src="resources/atv7.png"></p>
+                                    <h2 style="margin-top:1em;">Easy Now Playing Queue</h2>
+                                    <p>The app features a beautiful graphical interface that allows you to quickly move within your playlists.</p>
+                                    <p><img src="resources/atv8.png"></p>
                                     <h2 style="margin-top:1em;">The next of a new generation</h2>
                                     <p>The new Emby for Fire TV app is another in our new generation of more intelligent apps for all your devices. Designed more like the web client and fantastic Windows 8.1 and Win Phone apps, the Emby for Fire TV app continues our commitment to make Emby the absolute best solution for your personal media collection.</p>
                                     <p><img src="resources/atv6.png"></p>
