--- a/src/emby-for-appletv.html
+++ b/src/emby-for-appletv.html
@@ -463,14 +463,46 @@
                                 <div class="wpb_wrapper">
 
 
-                                    <h2><span>Available NOW in the App store on your 4th Gen Apple TV</span></h2><p>&nbsp;</p><p>
+                                    <h2><span>Available NOW on your 4th Gen Apple TV</span></h2><p>&nbsp;</p><p>
                                         <span rel='lightbox'>
                                             <img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016b25001ab_DeviceHome.png' alt='Po
 
 
 sted Image' />
                                         </span>
-                                    </p><p>&nbsp;</p><p><p class='bbc_center'>Access all<sup class='bbc'><span style='font-size: 12px'>*</span></sup> of your Emby media now from your Apple TV device.</p></p><p>&nbsp;</p><p><span style='font-size: 18px'><span style='font-size: 24px'>Supports Your Favorite Emby Features:</span></span><ul class='bbc'><li><strong class='bbc'>Movies</strong> - Complete with support for Emby <em class='bbc'>Cinema Mode</em></li><li><strong class='bbc'>TV</strong> - Manage your binge watching like a pro with automatic next episode queueing and quick access to subsequent episodes right from the TV Series and Episode pages</li><li><strong class='bbc'>Music</strong> - Full support for playlists, instant mix, artists and albums</li><li><strong class='bbc'>Cover Art</strong> Plug-in - Add your own personal touch to your images with custom treatments and overlays</li><li><strong class='bbc'>Photos</strong> and more from the smart, beautiful and intuitive interface of the Apple TV 4.</li></ul></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016ba800b2d_Home.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span style='font-size: 18px'>Find what you want quickly and easily with a smart home screen design as well as individualized displays for each media type. Or use the full search capabilities including voice dictation <span style='font-size: 12px'>(requires tvOS 9.2)</span>.</span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c3ac0ccf_TV.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c52ab533_AllMovies.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c7c2a846_Moviedetail3.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016caa49efb_SeriesDetail.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016cd7146d1_Music.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016cfa1c56e_Album.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016e3c76876_Photos.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p>* Live TV not yet supported</p>
+                                    </p><p><p class='bbc_center'>Access all<sup class='bbc'><span style='font-size: 12px'>*</span></sup> of your Emby media now from your Apple TV device.</p></p>
+
+                                    <h2>Smart Home Screen</h2>
+                                    <p><span style='font-size: 18px'>Find what you want quickly and easily with a smart home screen design as well as individualized displays for each media type. Or use the full search capabilities including voice dictation <span style='font-size: 12px'>(requires tvOS 9.2)</span>.</span></p>
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016ba800b2d_Home.png' alt='Posted Image' /></span></p>
+
+
+                                    <h2>Easy Browsing</h2>
+                                    <p><span style='font-size: 18px'>Or browse your TV and Movie collections with ease with smart library landing pages and grid views as well as search integration. </p>
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c3ac0ccf_TV.png' alt='Posted Image' /></span><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c52ab533_AllMovies.png' alt='Posted Image' /></span></p>
+
+                                    <h2>See All the Details</h2>
+                                    <p><span style='font-size: 18px'>A beautiful detail screen presentation allows you access to all the information for a particular item as well as cast, related content and suggestions.</p>
+
+                                     <p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c7c2a846_Moviedetail3.png' alt='Posted Image' /></span>
+
+                                    <span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016caa49efb_SeriesDetail.png' alt='Posted Image' /></span></p>
+
+                                    <h2>Hear the Music</h2>
+                                    <p><span style='font-size: 18px'>Emby for Apple TV knows music too with easy access to artists albums and playlists.</p>
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016cd7146d1_Music.png' alt='Posted Image' /></span></p>
+
+                                    <span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016cfa1c56e_Album.png' alt='Posted Image' /></span>
+
+                                    <h2>Picture Perfect</h2>
+                                    <p><span style='font-size: 18px'>Even your photos will look more beautiful in the Emby for Apple TV interface.</p>
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016e3c76876_Photos.png' alt='Posted Image' /></span></p>
+
+                                    <p>&nbsp;</p><p>* Live TV not yet supported</p>
 
 
                                 </div>
