--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -446,10 +446,10 @@
                                         <h2>Download</h2>
                                         <p>
                                             <div>
-                                                <a href="http://embydata.com/downloads/server/release/setup.exe" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Stable Release</span><span class="ripple-container"></span></a>
+                                                <a href="http://embydata.com/downloads/server/release/setup.exe" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'WindowsRelease');" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Stable Release</span><span class="ripple-container"></span></a>
                                             </div>
-                                            <br /><a href="http://embydata.com/downloads/server/beta/setup.exe">Beta Channel</a>
-                                            <br /><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/dev/setup.exe">Dev Channel (Unstable)</a>
+                                            <br /><a href="http://embydata.com/downloads/server/beta/setup.exe" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'WindowsBeta');">Beta Channel</a>
+                                            <br /><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/dev/setup.exe" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'WindowsDev');">Dev Channel (Unstable)</a>
                                         </p>
                                         <p style="margin-bottom:0;">
                                             <strong>Complete the Server Setup Wizard</strong><br />
