--- a/src/emby-for-chromecast.html
+++ b/src/emby-for-chromecast.html
@@ -458,9 +458,29 @@
             <div class="l-submain wpb_row">
                 <div class="l-submain-h g-html i-cf">
                     <div class="g-cols wpb_row offset_wide">
+
                         <div class="two-thirds">
-                            <div id="gallery_873493" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid"> <div class="w-gallery-tnails" style="position: relative; height: 422px;"><a class="w-gallery-tnail order_1" href="resources/53f76f50810b9_Ready.jpg" title="53f76f50810b9_Ready" style="opacity: 1; position: absolute; left: 0px; top: 0px;"><img width="600" height="338" src="resources/53f76f50810b9_Ready-600x338.jpg" class="w-gallery-tnail-img" alt="53f76f50810b9_Ready"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_2" href="resources/53f770bdc2875_Song.jpg" title="53f770bdc2875_Song" style="opacity: 1; position: absolute; left: 370px; top: 0px;"><img width="600" height="338" src="resources/53f770bdc2875_Song-600x338.jpg" class="w-gallery-tnail-img" alt="53f770bdc2875_Song"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_3" href="resources/53f77010a8549_MirrorDetail.jpg" title="53f77010a8549_MirrorDetail" style="opacity: 1; position: absolute; left: 0px; top: 211px;"><img width="600" height="338" src="resources/53f77010a8549_MirrorDetail-600x338.jpg" class="w-gallery-tnail-img" alt="53f77010a8549_MirrorDetail"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_4" href="resources/53f7704044613_Paused.jpg" title="53f7704044613_Paused" style="opacity: 1; position: absolute; left: 370px; top: 211px;"><img width="600" height="338" src="resources/53f7704044613_Paused-600x338.jpg" class="w-gallery-tnail-img" alt="53f7704044613_Paused"><span class="w-gallery-tnail-title"></span></a></div> </div>
-                        </div><div class="one-third">
+
+                            <h2>Remote Control from Emby Apps</h2>
+                            <p>Easily control Chromecast from the Emby web app, Emby Android app, and Emby iOS app.</p>
+                            <p>
+                                <img src="resources/53f77010a8549_MirrorDetail.jpg">
+                            </p>
+                            <h2>Supports the Latest Chromecast Features</h2>
+                            <p>Emby supports the Chromecast 2nd generation 4K devices, Chromecast Audio, and more.</p>
+                            <p>
+                                <img src="resources/53f76f50810b9_Ready-600x338.jpg">
+                            </p>
+
+                            <div id="gallery_873493" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid">
+                                <div class="w-gallery-tnails" style="position: relative; height: 422px;">
+                                    <a class="w-gallery-tnail order_2" href="resources/53f770bdc2875_Song.jpg" title="53f770bdc2875_Song" style="opacity: 1; position: absolute; left: 370px; top: 0px;"><img width="600" height="338" src="resources/53f770bdc2875_Song-600x338.jpg" class="w-gallery-tnail-img" alt="53f770bdc2875_Song"><span class="w-gallery-tnail-title"></span></a>
+                                    <a class="w-gallery-tnail order_4" href="resources/53f7704044613_Paused.jpg" title="53f7704044613_Paused" style="opacity: 1; position: absolute; left: 370px; top: 211px;"><img width="600" height="338" src="resources/53f7704044613_Paused-600x338.jpg" class="w-gallery-tnail-img" alt="53f7704044613_Paused"><span class="w-gallery-tnail-title"></span></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="one-third">
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
