--- a/src/emby-for-fire-tv.html
+++ b/src/emby-for-fire-tv.html
@@ -464,22 +464,26 @@
 
                                     <h2>What you want to watch – right up front</h2>
                                     <p>Designed with with typical usage in mind, you won’t have to go hunting through your library to find the content you are most likely wanting to watch right now. The home screen shows you the items you were watching but hadn’t finished, your latest un-watched movies, the next episode of all your current TV shows and what’s on Live TV right now.</p>
-                                    <p><img src="resources/5537f5f940bcb_firehome21.png"></p>
+                                    <p>
+                                        <img src="resources/5537f5f940bcb_firehome21.png">
+                                    </p>
 
                                 </div>
                             </div>
-                        </div><div class="one-third">
+                        </div>
+                        <div class="one-third">
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
                                     <h3>Download</h3>
                                     <p>Emby for Fire TV is available in the Amazon App Store.</p>
                                     <div>
-                                        <a href="http://www.amazon.com/Emby-for-Fire-TV/dp/B00VVJKTW8" target="_blank"><img class="alignnone size-medium wp-image-5449" src="resources/amazonapp.png" alt="playsstore" style="max-height:54px;"></a>
+                                        <a href="http://www.amazon.com/Emby-for-Fire-TV/dp/B00VVJKTW8" target="_blank"><img class="alignnone size-medium wp-image-5449" src="resources/amazonapp.png" alt="playsstore" style="max-height: 54px;"></a>
                                     </div>
 
 
-                                    <br />							<div>
+                                    <br />
+                                    <div>
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Fire%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
@@ -489,7 +493,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide">
+                    </div>
+                    <!-- Row Backgrounds -->
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide">
                         <div class="full-width">
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
