--- a/src/emby-web-client.html
+++ b/src/emby-web-client.html
@@ -472,7 +472,12 @@
                                         The Emby Web Client is your gateway to your media library and your users. Browse your library, stream content to any device with a web browser, manage your users, monitor activity, and more.
                                     </p>
                                 </div>
-                            </div> <div class="g-cols wpb_row offset_wide"><div class="full-width"></div></div><span class="wpb_button align_left"><a href="http://app.emby.media" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-external-link-square"></i><span>Sign In</span><span class="ripple-container"></span></a></span>
+                            </div>
+                            <div class="g-cols wpb_row offset_wide">
+                                <div class="full-width"></div>
+                            </div><span class="wpb_button align_left">
+                                <a href="http://app.emby.media" target="_blank" class="g-btn color_primary type_raised" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'WebApp');"><i class="fa fa-external-link-square"></i><span>Sign In</span><span class="ripple-container"></span></a>
+                            </span>
                             <div class="g-cols wpb_row offset_wide">
                                 <div class="full-width">
                                     <div class="wpb_text_column ">
