--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -456,7 +456,7 @@
                                         <h2>Installation</h2>
                                         <p>
                                             <strong>Download</strong><br>
-                                            Download and run the <a href="https://github.com/MediaBrowser/MediaBrowser.Releases/raw/master/Server/Emby.Server.Mac.pkg">installer.</a>
+                                            Download and run the <a href="https://github.com/MediaBrowser/MediaBrowser.Releases/raw/master/Server/Emby.Server.Mac.pkg" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">installer.</a>
                                         </p>
                                         <p>
                                             <strong>Start the Server</strong><br>
