update download instructions

--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -648,7 +648,7 @@
                                         <div class="w-tabs-section-content-h i-cf">
                                             <div><strong>Install Dependencies</strong></div>
                                             <ul>
-                                                <li><a href="http://www.mono-project.com/download/">mono</a> 3.4 or above</li>
+                                                <li><a href="http://www.mono-project.com/download/">mono</a> 4.6.2 or above</li>
                                                 <li>sqlite3</li>
                                                 <li>ImageMagick (preferably Q8, without OpenMP, without HDRI)</li>
                                             </ul>
@@ -659,7 +659,7 @@
                                             <div><strong>Configure</strong></div>
                                             <ul>
                                                 <li>Adjust ImageMagickSharp.dll.config as needed to point to the installed version of ImageMagick</li>
-                                                <li>Adjust System.Data.SQLite.dll.config as needed to point to the installed version of sqlite3</li>
+                                                <li>Adjust SQLitePCLRaw.provider.sqlite3.dll.config as needed to point to the installed version of sqlite3</li>
                                             </ul>
                                             <div><strong>Run Emby Server</strong></div>
                                             <ul>
