--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -473,6 +473,11 @@
                                         <a href="https://github.com/MediaBrowser/Wiki/wiki/Roku" target="_blank">Emby for Roku Wiki</a>
                                     </div>
 
+                                    <h4>Try the Beta Preview of the new Emby for Roku App</h4>
+                                    <div style="margin-top:1em;">
+                                        The preview of our brand new modern interface Roku app can be installed as a <a href="https://my.roku.com/add/JMP2HD9" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
+                                    </div>
+
                                 </div>
                             </div> <div class="g-cols wpb_row offset_wide"><div class="full-width"></div></div><div class="g-cols wpb_row offset_wide"></div><div class="full-width"></div>
                         </div>
