--- a/src/download.html
+++ b/src/download.html
@@ -495,10 +495,13 @@
                                             </a>
                                             <span class="ripple-container"></span>
                                         </div>
-                                    </div><div class="w-portfolio-item order_3 emby-server" style="opacity: 1;">
+                                    </div>
+                                    <div class="w-portfolio-item order_3 emby-server" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="nas-server.html">
-                                                <div class="w-portfolio-item-image"><img width="500" height="500" src="resources/server-nas.png" class="w-portfolio-item-image-first wp-post-image" alt="server-nas">	</div>
+                                                <div class="w-portfolio-item-image">
+                                                    <img width="500" height="500" src="resources/server-nas.png" class="w-portfolio-item-image-first wp-post-image" alt="server-nas">
+                                                </div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby Server for NAS</h2>
@@ -509,10 +512,13 @@
                                             </a>
                                             <span class="ripple-container"></span>
                                         </div>
-                                    </div><div class="w-portfolio-item order_4 emby-server" style="opacity: 1;">
+                                    </div>
+                                    <div class="w-portfolio-item order_4 emby-server" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="mac-server.html">
-                                                <div class="w-portfolio-item-image"><img width="500" height="500" src="resources/server-mac.png" class="w-portfolio-item-image-first wp-post-image" alt="server-mac">	</div>
+                                                <div class="w-portfolio-item-image">
+                                                    <img width="500" height="500" src="resources/server-mac.png" class="w-portfolio-item-image-first wp-post-image" alt="server-mac">
+                                                </div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby Server for Mac</h2>
@@ -523,7 +529,23 @@
                                             </a>
                                             <span class="ripple-container"></span>
                                         </div>
-                                    </div><div class="w-portfolio-item order_5 emby-server" style="opacity: 1;">
+                                    </div>
+                                    <div class="w-portfolio-item order_5 emby-server" style="opacity: 1;">
+                                        <div class="w-portfolio-item-h">
+                                            <a class="w-portfolio-item-anchor" href="docker-server.html">
+                                                <div class="w-portfolio-item-image"><img width="500" height="500" src="resources/docker.png" class="w-portfolio-item-image-first wp-post-image" alt="server-freebsd">	</div>
+                                                <div class="w-portfolio-item-meta">
+                                                    <div class="w-portfolio-item-meta-h">
+                                                        <h2 class="w-portfolio-item-title">Emby Server for Docker</h2>
+                                                        <span class="w-portfolio-item-arrow"></span>
+                                                        <span class="w-portfolio-item-text"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <span class="ripple-container"></span>
+                                        </div>
+                                    </div>
+                                    <div class="w-portfolio-item order_6 emby-server" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="freebsd-server.html">
                                                 <div class="w-portfolio-item-image"><img width="500" height="500" src="resources/server-freebsd.png" class="w-portfolio-item-image-first wp-post-image" alt="server-freebsd">	</div>
