--- a/src/blogpost.html
+++ b/src/blogpost.html
@@ -334,41 +334,7 @@
 
 
 
-                    <div class="w-socials">
-                        <div class="w-socials-list">
-                            <div class="w-socials-item facebook">
-                                <a class="w-socials-item-link" target="_blank" href="http://facebook.com/embyapp"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Facebook</span>
-                                </div>
-                            </div><div class="w-socials-item twitter">
-                                <a class="w-socials-item-link" target="_blank" href="http://twitter.com/embyapp"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Twitter</span>
-                                </div>
-                            </div><div class="w-socials-item google">
-                                <a class="w-socials-item-link" target="_blank" href="https://plus.google.com/u/0/104622186938779417813/posts"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Google+</span>
-                                </div>
-                            </div><div class="w-socials-item tumblr">
-                                <a class="w-socials-item-link" target="_blank" href="http://embyapp.tumblr.com/"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Tumblr</span>
-                                </div>
-                            </div><div class="w-socials-item github">
-                                <a class="w-socials-item-link" target="_blank" href="https://github.com/MediaBrowser"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>GitHub</span>
-                                </div>
-                            </div><div class="w-socials-item rss">
-                                <a class="w-socials-item-link" target="_blank" href="blog.xml"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>RSS</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {SOCIALICONS}
                 </div>
             </div>
             <div class="l-subheader at_middle" style="line-height: 100px;">
