--- a/src/socialnetworks.html
+++ b/src/socialnetworks.html
@@ -12,6 +12,9 @@
 <!-- Twitter summary card with large image must be at least 280x150px -->
 <meta name="twitter:image:src" content="{{largeImageUrl}}">
 
+<!-- Pinterest -->
+<meta name="p:domain_verify" content="cc2890d97a2653d9254ab08a2d1ac89f" />
+
 <!-- Open Graph data -->
 <meta property="og:title" content="{{articleTitle}}" />
 <meta property="og:type" content="article" />
@@ -24,4 +27,4 @@
 <meta property="article:section" content="Article Section" />
 <meta property="article:tag" content="Article Tag" />
 <meta property="fb:admins" content="1618309211750238"/>
-<meta property="fb:app_id" content="1618309211750238" />
+<meta property="fb:app_id" content="1618309211750238"/>
