--- a/src/support.html
+++ b/src/support.html
@@ -336,41 +336,7 @@
 
 
 
-                    <div class="w-socials">
-                        <div class="w-socials-list">
-                            <div class="w-socials-item facebook">
-                                <a class="w-socials-item-link" target="_blank" href="http://facebook.com/embyapp"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Facebook</span>
-                                </div>
-                            </div><div class="w-socials-item twitter">
-                                <a class="w-socials-item-link" target="_blank" href="http://twitter.com/embyapp"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Twitter</span>
-                                </div>
-                            </div><div class="w-socials-item google">
-                                <a class="w-socials-item-link" target="_blank" href="https://plus.google.com/u/0/104622186938779417813/posts"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Google+</span>
-                                </div>
-                            </div><div class="w-socials-item tumblr">
-                                <a class="w-socials-item-link" target="_blank" href="http://embyapp.tumblr.com/"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>Tumblr</span>
-                                </div>
-                            </div><div class="w-socials-item github">
-                                <a class="w-socials-item-link" target="_blank" href="https://github.com/MediaBrowser"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>GitHub</span>
-                                </div>
-                            </div><div class="w-socials-item rss">
-                                <a class="w-socials-item-link" target="_blank" href="blog.xml"></a>
-                                <div class="w-socials-item-popup">
-                                    <span>RSS</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {SOCIALICONS}
                 </div>
             </div>
             <div class="l-subheader at_middle" style="line-height: 100px;">
@@ -514,35 +480,67 @@
                                     </div> <!-- aio-icon-box -->
                                 </a>
                             </div> <!-- aio-icon-component -->
-                        </div><div class="one-quarter">
+                        </div>
+                        <div class="one-quarter">
                             <div class="aio-icon-component   style_2">
                                 <a class="aio-icon-box-link" href="https://plus.google.com/u/0/104622186938779417813/posts" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
-                                                <div class="aio-icon circle  animated fadeIn delay-03" data-animation="fadeIn" data-animation-delay="03" style="color:#333333;background:#ffffff;font-size:100px;display:inline-block;">
+                                                <div class="aio-icon circle  animated fadeIn delay-03" data-animation="fadeIn" data-animation-delay="03" style="color: #333333; background: #ffffff; font-size: 100px; display: inline-block;">
                                                     <i class="Defaults-google-plus-square"></i>
                                                 </div>
                                             </div>
-                                        </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Google Plus</h3></div> <!-- header --><div class="aio-icon-description" style="">Follow us on Google Plus&nbsp;to keep up with the latest Emby news.</div> <!-- description -->
+                                        </div>
+                                        <div class="aio-icon-header">
+                                            <h3 class="aio-icon-title" style="">Google Plus</h3>
+                                        </div> <!-- header -->
+                                        <div class="aio-icon-description" style="">Follow us on Google Plus&nbsp;to keep up with the latest Emby news.</div> <!-- description -->
                                     </div> <!-- aio-icon-box -->
                                 </a>
                             </div> <!-- aio-icon-component -->
-                        </div><div class="one-quarter">
+                        </div>
+
+                        <div class="one-quarter">
+                            <div class="aio-icon-component   style_2">
+                                <a class="aio-icon-box-link" href="https://www.pinterest.com/emby0240/emby-news/" target=" _blank">
+                                    <div class="aio-icon-box top-icon" style="">
+                                        <div class="aio-icon-top">
+                                            <div class="ult-just-icon-wrapper ">
+                                                <div class="aio-icon circle  animated fadeIn delay-03" data-animation="fadeIn" data-animation-delay="03" style="color: #333333; background: #ffffff; font-size: 100px; display: inline-block;">
+                                                    <i class="Defaults-pinterest"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="aio-icon-header">
+                                            <h3 class="aio-icon-title" style="">Pinterest</h3>
+                                        </div> <!-- header -->
+                                        <div class="aio-icon-description" style="">Follow us on Pinterest to keep up with the latest Emby news.</div> <!-- description -->
+                                    </div> <!-- aio-icon-box -->
+                                </a>
+                            </div> <!-- aio-icon-component -->
+                        </div>
+
+                        <div class="one-quarter">
                             <div class="aio-icon-component   style_2">
                                 <a class="aio-icon-box-link" href="http://embyapp.tumblr.com/" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
-                                                <div class="aio-icon circle  animated fadeIn delay-03" data-animation="fadeIn" data-animation-delay="03" style="color:#333333;background:#ffffff;font-size:100px;display:inline-block;">
+                                                <div class="aio-icon circle  animated fadeIn delay-03" data-animation="fadeIn" data-animation-delay="03" style="color: #333333; background: #ffffff; font-size: 100px; display: inline-block;">
                                                     <i class="Defaults-tumblr"></i>
                                                 </div>
                                             </div>
-                                        </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Tumblr</h3></div> <!-- header --><div class="aio-icon-description" style="">Follow us on Tumblr to keep up with the latest Emby news.</div> <!-- description -->
+                                        </div>
+                                        <div class="aio-icon-header">
+                                            <h3 class="aio-icon-title" style="">Tumblr</h3>
+                                        </div> <!-- header -->
+                                        <div class="aio-icon-description" style="">Follow us on Tumblr to keep up with the latest Emby news.</div> <!-- description -->
                                     </div> <!-- aio-icon-box -->
                                 </a>
                             </div> <!-- aio-icon-component -->
                         </div>
+
                     </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
                 </div>
             </div>
